# packedobjects

./: .gitignore  LICENSE.txt  Makefile.am  README  configure.ac
doc/: tutorial.texi
embedded/buildroot/libpackedobjects/: Config.in  libpackedobjects.mk
embedded/buildroot/packedobjects/: Config.in  packedobjects.mk
examples/: baseball.xml  baseball.xsd  currency.xml  currency.xsd  euro.xml  euro.xsd  foonull.xsd  inr.xml  inr.xsd  iptel-devinfo.xml  iptel-devinfo.xsd  iptel-ethinfo.xml  iptel-ethinfo.xsd  menu.xml  menu.xsd  personnel.xml  personnel.xsd  ping.xml  ping.xsd  purchaseorder.xml  purchaseorder.xsd  router-addnet.xml  router-addnet.xsd  router-disc.xml  router-disc.xsd  router-qos.xml  router-qos.xsd  sensor.xml  sensor.xsd  switch-config.xml  switch-config.xsd  temper-sens.xml  temper-sens.xsd  timestamps.xml  timestamps.xsd  unsafenumbers.xml  unsafenumbers.xsd  vehicles.xml  vehicles.xsd
pkgconfig/: libpackedobjects.pc
schema/: packedobjectsDataTypes.xsd  packedobjectsSchemaTypes.xsd
src/: Makefile.am  canon.c  canon.h  decode.c  decode.h  encode.c  encode.h  expand.c  expand.h  ier.c  ier.h  main.c  packedobjects.c  packedobjects.h  packedobjects_decode.c  packedobjects_decode.h  packedobjects_encode.c  packedobjects_encode.h  packedobjects_init.c  packedobjects_init.h  schema.c  schema.h
test/: po-test.sh
tools/packedobjects/: configure.ac
tools/packedobjects/src/: Makefile.am  main.c
